--- a/app/Resources/views/layout/slide.html.twig
+++ b/app/Resources/views/layout/slide.html.twig
@@ -7,7 +7,6 @@
             <li data-target="#myCarousel" data-slide-to="2" class=""></li>
             <li data-target="#myCarousel" data-slide-to="3" class=""></li>
             <li data-target="#myCarousel" data-slide-to="4" class=""></li>
-            <li data-target="#myCarousel" data-slide-to="5" class=""></li>
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
@@ -15,6 +14,24 @@
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h2>Cach Cafe</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{{ asset('assets/images/banner/banner-cafe.jpg') }}" alt="Xây Dựng Minh Duy">
+                <div class="container">
+                    <div class="carousel-caption text-left">
+                        <h3>Xây Dựng Minh Duy</h3>
+                    </div>
+                </div>
+            </div>
+			<div class="item">
+                <a href="{{ path('news_show', {'slug': 'du-an-xay-nha-tron-goi-cmt8-quan-10-tp-hcm' }) }}">
+                    <img src="{{ asset('assets/images/banner/xay-nha-tron-goi-cmt8.jpg') }}" alt="Công Trình Xây Nhà Trọn Gói CMT8">
+                </a>
+                <div class="container">
+                    <div class="carousel-caption text-left">
+                        <h3>Công Trình Xây Nhà Trọn Gói CMT8</h3>
                     </div>
                 </div>
             </div>
@@ -29,40 +46,12 @@
                 </div>
             </div>
             <div class="item">
-                <a href="{{ path('news_show', {'slug': 'thi-cong-quan-cafe-the-coffee-house-490-nguyen-thi-thap' }) }}">
-                    <img src="{{ asset('assets/images/banner/banner-cafe-the-coffee-house-ntt.jpg') }}" alt="The Coffee House Nguyễn Thị Thập">
-                </a>
-                <div class="container">
-                    <div class="carousel-caption text-left">
-                        <h3>The Coffee House 490 Nguyễn Thị Thập</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
                 <a href="{{ path('news_show', {'slug': 'xay-nha-pho-4-tang-anh-huu-quan-12' }) }}">
                     <img src="{{ asset('assets/images/banner/banner-xay-nha-pho-3-tang-thay-hanh.jpg') }}" alt="Xây nhà phố 3 tầng, Thầy Hạnh">
                 </a>
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h3>Xây nhà phố 3 tầng, Thầy Hạnh</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img src="{{ asset('assets/images/banner/banner-01.png') }}" alt="Thiết kế thi công nội thất">
-                <div class="container">
-                    <div class="carousel-caption text-left">
-                        <h3>Thiết kế thi công nội thất</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <a href="{{ path('news_show', {'slug': 'du-an-sua-chua-trung-tam-anh-ngu-english-town-tran-quoc-thao-sai-gon' }) }}">
-                    <img src="{{ asset('assets/images/banner/banner.jpg') }}" alt="English Town">
-                </a>
-                <div class="container">
-                    <div class="carousel-caption text-left">
-                        <h3>English Town</h3>
                     </div>
                 </div>
             </div>
