--- a/app/Resources/views/news/components/related.html.twig
+++ b/app/Resources/views/news/components/related.html.twig
@@ -8,7 +8,7 @@
                         <a class="related-img" href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
                             <img class="mr-3 img-thumbnail" src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_thumb') }}" alt="{{row.getTitle()}}">
                         </a>
-                        <a class="related-title" href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
+                        <a class="related-title text-center" href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
                             {{ row.getTitle() }}
                         </a>
                     </div>
