--- a/web/assets/scss/front/pages/_homepage.scss
+++ b/web/assets/scss/front/pages/_homepage.scss
@@ -99,6 +99,7 @@
         .marketing-company {
             p {
                 margin-bottom: 12px;
+                text-align: justify;
 
                 /* Small Devices, Tablets */
                 @media only screen and (max-width : 768px) {
@@ -140,7 +141,7 @@
 
 .list-news-items {
     .news-item {
-        margin-bottom: 30px;
+        margin-bottom: 20px;
 
         .news-item-wrapper {
             border: 1px solid $killarney;
