--- a/app/Resources/views/layout/hotline.html.twig
+++ b/app/Resources/views/layout/hotline.html.twig
@@ -6,14 +6,14 @@
     <section class="row inside cover">
         <a class="call-now col-xs-6" href="tel:0982969379" title="Hotline: 0982969379">
             <div>
-                <i class="fa fa-phone-square" aria-hidden="true"></i>
-                <span>Hotline tư vấn</span>
-                <strong>0982.96.93.79</strong>
+                <i class="fas fa-mobile-alt"></i>
+                <span>Hotline</span>
+                <strong>0982.969.379</strong>
             </div>
         </a>
-        <a class="chat-us col-xs-6" href="{{ path('contact') }}">
+        <a class="chat-us col-xs-6" href="mailto:xaydungminhduy@gmail.com">
             <div>
-                <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                <i class="far fa-envelope"></i>
                 <span>Gửi yêu cầu</span>
                 <strong>báo giá</strong>
             </div>
