--- a/app/Resources/views/layout/slide.html.twig
+++ b/app/Resources/views/layout/slide.html.twig
@@ -36,12 +36,12 @@
                 </div>
             </div>
             <div class="item">
-                <a href="{{ path('news_show', {'slug': 'thi-cong-xay-dung-quan-tra-sua-ten-ren-s-175-le-van-viet' }) }}">
-                    <img src="{{ asset('assets/images/banner/banner-2.jpg') }}" alt="Tenren 175 Lê Văn Việt">
+                <a href="{{ path('homepage') }}">
+                    <img src="{{ asset('assets/images/banner/minhduyconstruction.jpg') }}" alt="Minh Duy Construction">
                 </a>
                 <div class="container">
                     <div class="carousel-caption text-left">
-                        <h3>Tenren 175 Lê Văn Việt</h3>
+                        <h3>Minh Duy Construction</h3>
                     </div>
                 </div>
             </div>
