--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -6,10 +6,10 @@
         "@context": "http://schema.org",
         "@type": "Organization",
         "url": "https://xaydungminhduy.com/",
-        "logo": "https://xaydungminhduy.com/assets/images/SuaNhaMinhDuy.png",
+        "logo": "https://xaydungminhduy.com/assets/images/logo.png",
         "contactPoint": {
             "@type": "ContactPoint",
-            "telephone": "+84 98 2969379",
+            "telephone": "+84982969379",
             "contactType": "customer service"
         }
     }
@@ -39,139 +39,162 @@
         "name": "Xây Dựng Minh Duy",
         "url": "https://xaydungminhduy.com/",
         "sameAs": [
-            "https://www.facebook.com/minhduyconstruction/",
-            "https://twitter.com/xaydungminhduy",
-            "https://www.linkedin.com/in/xaydungminhduy/",
-            "https://plus.google.com/u/0/113879313630849593934",
-            "https://www.youtube.com/channel/UCwYmkaoSIRgpZo2Us4FzleQ"
+            "{{ get_setting('linkToFacebook') }}",
+            "{{ get_setting('linkToTwitter') }}",
+            "{{ get_setting('linkToYoutube') }}",
+            "{{ get_setting('linkToLinkedin') }}"
         ]
     }
     </script>
 {% endblock %}
 
 {% block body %}
-    <div class="container wrapper-container">
+    <div class="wrapper-container">
         {{ include('news/components/listPrices.html.twig') }}
 
-        <div class="row marketing">
-            <div class="col-xs-12 col-sm-12 col-md-4">
-                <h3 class="text-uppercase">Xây Dựng Minh Duy</h3>
-                <div class="marketing-company">
-                    <p>Xây Dựng Minh Duy tự hào là nhà thầu xây dựng uy tín số 1 tại Thành Phố Hồ Chí Minh.</p>
-                    <p>Xây Dựng Minh Duy với đội ngũ kiến trúc sư, kỹ sư, nhân viên có chuyên môn cao, tận tâm, năng động luôn nỗ lực phấn đấu phục vụ khách hàng một cách tốt nhất.</p>
-                    <p>Chúng tôi cải tiến không ngừng nâng cao chất lượng dịch vụ và những sáng tạo trong xây dựng và thiết kế thi công.</p>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="media">
-                    <div class="media-left">
-                        <span><i class="fa fa-balance-scale"></i></span>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading text-uppercase">Giá cả hợp lý, cạnh tranh</h2>
-                        <div class="marketing-container">
-                            Giá cả xây dựng hợp lý, cạnh tranh
-                        </div>
-                    </div>
-                </div>
-                <div class="media">
-                    <div class="media-left">
-                        <span><i class="fa fa-globe"></i></span>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading text-uppercase">Báo giá miễn phí, tận nơi</h2>
-                        <div class="marketing-container">
-                            Báo giá xây dựng miễn phí, tận nơi
-                        </div>
-                    </div>
-                </div>
-                <div class="media">
-                    <div class="media-left">
-                        <span><i class="fa fa-cubes"></i></span>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading text-uppercase">Đội ngũ chuyên nghiệp</h2>
-                        <div class="marketing-container">
-                            Đội ngũ kiến trúc sư, kĩ sư, thợ chuyên nghiệp, nhiều kinh nghiệm
-                        </div>
-                    </div>
-                </div>
-                <div class="media">
-                    <div class="media-left">
-                        <span><i class="fa fa-lightbulb-o"></i></span>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading text-uppercase">Sáng tạo trong thiết kế</h2>
-                        <div class="marketing-container">
-                            Những kỹ sư thiết kế về kiến trúc và nội thất có kinh nghiệm.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <div class="media">
-                    <div class="media-left">
-                        <span><i class="fa fa-key"></i></span>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading text-uppercase">Cam kết bảo hành</h2>
-                        <div class="marketing-container">
-                            Cam kết bảo hành công trình lâu dài
-                        </div>
-                    </div>
-                </div>
-                <div class="media">
-                    <div class="media-left">
-                        <span><i class="fa fa-cogs"></i></span>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading text-uppercase">Thi công nhanh, đảm bảo</h2>
-                        <div class="marketing-container">
-                            Thi công nhanh, đúng hợp đồng, đảm bảo chất lượng
-                        </div>
-                    </div>
-                </div>
-                <div class="media">
-                    <div class="media-left">
-                        <span><i class="fa fa-bullhorn"></i></span>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading text-uppercase">Không phát sinh phí</h2>
-                        <div class="marketing-container">
-                            Không phát sinh phí hoặc có nhưng rất ít
-                        </div>
-                    </div>
-                </div>
-                <div class="media">
-                    <div class="media-left">
-                        <span><i class="fa fa-commenting-o"></i></span>
-                    </div>
-                    <div class="media-body">
-                        <h2 class="media-heading text-uppercase">Tư vấn hỗ trợ tận tình</h2>
-                        <div class="marketing-container">
-                            Sẵn sàng tư vấn hỗ trợ cho bạn đầy đủ thắc mắc và vấn đề quan tâm nhất.
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        {% for blockOnHomepage in blocksOnHomepage %}
-        <div class="row">
-            <div class="col-md-12 title-list-news-items">
-                <h1 class="text-center text-uppercase">{{ blockOnHomepage.category.getName() }}</h1>
-                <span class="text-center block-underline"></span>
-                <p>{{ blockOnHomepage.description }}</p>
-            </div>
-            <div class="col-md-12 list-news-items">
+        <div class="wrapper-container-item why-choose-us">
+            <div class="container">
                 <div class="row">
-                    {% for row in blockOnHomepage.posts %}
-                        {{ include('news/components/itemsGridHomepage.html.twig') }}
-                    {% endfor %}
+                    <h2 class="text-center text-uppercase why-choose-us-title">Cam kết của chúng tôi</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="media">
+                            <div class="media-left">
+                                <span><i class="fa fa-globe"></i></span>
+                            </div>
+                            <div class="media-body">
+                                <h2 class="media-heading text-uppercase">Báo giá miễn phí, tận nơi</h2>
+                                <div class="marketing-container">
+                                    <p>Báo giá xây dựng nhà phố, biệt thự, sửa chữa nhà miễn phí, nhanh chóng, tận nơi, làm việc 24/7</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="media">
+                            <div class="media-left">
+                                <span><i class="fa fa-balance-scale"></i></span>
+                            </div>
+                            <div class="media-body">
+                                <h2 class="media-heading text-uppercase">Giá cả hợp lý, cạnh tranh</h2>
+                                <div class="marketing-container">
+                                    <p>Bảng báo giá xây dựng nhà, sửa chữa nhà của chúng tôi hợp lý, rõ ràng từng vấn đề, cạnh tranh</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="media">
+                            <div class="media-left">
+                                <span><i class="fas fa-users"></i></span>
+                            </div>
+                            <div class="media-body">
+                                <h2 class="media-heading text-uppercase">Đội ngũ chuyên nghiệp</h2>
+                                <div class="marketing-container">
+                                    <p>Bạn sẽ được làm việc cùng đội ngũ kiến trúc sư, kĩ sư, tổ thợ chuyên nghiệp, nhiều kinh nghiệm</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="media">
+                            <div class="media-left">
+                                <span><i class="fas fa-gem"></i></span>
+                            </div>
+                            <div class="media-body">
+                                <h2 class="media-heading text-uppercase">Cam kết bảo hành</h2>
+                                <div class="marketing-container">
+                                    <p>Chúng tôi luôn cam kết bảo hành công trình thi công lâu dài, đồng hành cùng quý khách hàng</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="media">
+                            <div class="media-left">
+                                <span><i class="fa fa-lightbulb-o"></i></span>
+                            </div>
+                            <div class="media-body">
+                                <h2 class="media-heading text-uppercase">Sáng tạo trong thiết kế</h2>
+                                <div class="marketing-container">
+                                    <p>Những kỹ sư thiết kế về kiến trúc và nội thất có kinh nghiệm sẽ đưa đến những ý tưởng sáng tạo cho ngôi nhà của bạn</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="media">
+                            <div class="media-left">
+                                <span><i class="fa fa-bullhorn"></i></span>
+                            </div>
+                            <div class="media-body">
+                                <h2 class="media-heading text-uppercase">Không phát sinh phí</h2>
+                                <div class="marketing-container">
+                                    <p>Chúng tôi cam kết đến toàn thể quý khách hàng không phát sinh phí trong quá trình xây dựng</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+        {% for blockOnHomepage in blocksOnHomepage %}
+            {% if blockOnHomepage.category.getUrl() != 'du-an' %}
+                <div class="wrapper-container-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 title-list-news-items">
+                                <h1 class="text-center text-uppercase">
+                                    <img alt="{{ blockOnHomepage.category.getName() }}" src="{{ asset('assets/images/icon-logo.png') }}" />
+                                    <i class="fas fa-angle-right"></i>
+                                    {{ blockOnHomepage.category.getName() }}
+                                </h1>
+                                <span class="text-center block-underline"></span>
+                                <p>{{ blockOnHomepage.description }}</p>
+                            </div>
+
+                            <div class="col-md-12 list-news-items">
+                                <div class="row">
+                                    {% for row in blockOnHomepage.posts %}
+                                        {{ include('news/components/itemsGridHomepage.html.twig') }}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                <div class="wrapper-container-item project-hot">
+                    <div class="container">
+                        <div class="row project-hot">
+                            <div class="col-md-12 title-list-news-items">
+                                <h1 class="text-center text-uppercase">
+                                    <img alt="{{ blockOnHomepage.category.getName() }}" src="{{ asset('assets/images/icon-logo.png') }}" />
+                                    <i class="fas fa-angle-right"></i>
+                                    Dự án nổi bật
+                                </h1>
+                                <span class="text-center block-underline"></span>
+                                <p>{{ blockOnHomepage.description }}</p>
+                            </div>
+
+                            <div class="clearfix"></div>
+
+                            <div class="list-news-items">
+                                <div class="bxslider">
+                                    {% for row in blockOnHomepage.posts %}
+                                        {{ include('news/components/itemsGridSlide.html.twig') }}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         {% endfor %}
-        <div class="row">
+
+        <div class="row hidden">
             <div class="col-md-12 title-list-news-items">
                 <h1 class="text-center text-uppercase">Dự toán chi phí xây dựng</h1>
                 <span class="text-center block-underline"></span>
