--- a/app/Resources/views/layout/fanpage.html.twig
+++ b/app/Resources/views/layout/fanpage.html.twig
@@ -4,6 +4,7 @@
     </h3>
     <div class="fb-page"
         data-href="https://www.facebook.com/minhduyconstruction/"
+        data-tabs="timeline"
         data-width="340"
         data-small-header="false"
         data-adapt-container-width="true"
