--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -37,15 +37,11 @@
                 <ul class="footer-company">
                     <li>
                         <i class="fa fa-map-marker"></i>
-                        <span>165 Đường 51, KP 4, P. Tân Quy, Quận 7, TP.HCM</span>
-                    </li>
-                    <li>
-                        <i class="fa fa-map-marker"></i>
-                        <span>108/40/10 Lê Văn Lương, KP 4, P. Tân Hưng, Quận 7, TP.HCM</span>
+                        <span>10E3 Đường 30, P. Tân Phong, Quận 7, TP.HCM</span>
                     </li>
                     <li>
                         <i class="fa fa-phone"></i>
-                        <span>0982.96.93.79</span>
+                        <span>0982.969.379</span>
                     </li>
                     <li>
                         <i class="fa fa-envelope-o"></i>
@@ -60,7 +56,9 @@
         </div>
         <div class="row footer-middle">
             <div class="col-12 col-md-12 col-lg-3 hidden-xs hidden-sm">
-                <img src="{{ asset('assets/images/SuaNhaMinhDuy.png') }}" alt="{{ get_setting('siteName') }}" />
+                <a href="{{ path('homepage') }}" title="{{ get_setting('siteName') }}">
+                    <img alt="{{ get_setting('siteName') }}" src="{{ asset('assets/images/logo-footer.png') }}">
+                </a>
             </div>
             <div class="col-12 col-md-12 col-lg-6">
                 <h3 class="text-uppercase">Về chúng tôi</h3>
@@ -99,37 +97,37 @@
                 <div class="event-footer row">
                     <div class="col-12 col-sm-12 col-md-12">
                         <div class="event-footer-item" itemtype="http://data-vocabulary.org/Event" itemscope="">
-                            <meta content="➊ Sửa nhà trọn gói tại TP HCM" itemprop="eventType">
-                            <meta content="➊ Sửa nhà trọn gói tại TP HCM" itemprop="name">
-                            <meta content="➊ Sửa nhà trọn gói tại TP HCM" itemprop="description">
+                            <meta content="➊ Bảng giá sửa nhà trọn gói tại TP HCM" itemprop="eventType">
+                            <meta content="➊ Bảng giá sửa nhà trọn gói tại TP HCM" itemprop="name">
+                            <meta content="➊ Bảng giá sửa nhà trọn gói tại TP HCM" itemprop="description">
                             <h6>
-                            <a href="{{ path('news_show', {'slug': 'dich-vu-sua-nha-tron-goi-tai-tp-hcm' }) }}" itemprop="url">
-                                <span itemprop="summary">➊ Sửa nhà trọn gói tại TP HCM</span> </a>
+                            <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" itemprop="url">
+                                <span itemprop="summary">➊ Bảng giá sửa nhà trọn gói tại TP HCM</span> </a>
                             </h6>
                             <meta content="1/1/2030" itemprop="startDate">
-                            <meta content="➽ Uy Tiến, Chất Lượng" itemprop="location">
+                            <meta content="☎️ Báo Giá 0982.96.93.79" itemprop="location">
                         </div>
                         <div class="event-footer-item" itemtype="http://data-vocabulary.org/Event" itemscope="">
-                            <meta content="➋ Xây nhà trọn gói tại TP HCM" itemprop="eventType">
-                            <meta content="➋ Xây nhà trọn gói tại TP HCM" itemprop="name">
-                            <meta content="➋ Xây nhà trọn gói tại TP HCM" itemprop="description">
-                            <h6>
-                            <a href="{{ path('news_show', {'slug': 'xay-nha-tron-goi' }) }}" itemprop="url">
-                                <span itemprop="summary">➋ Xây nhà trọn gói tại TP HCM</span> </a>
-                            </h6>
-                            <meta content="2/2/2030" itemprop="startDate">
-                            <meta content="➽ Cam Kết Bảo Hành" itemprop="location">
-                        </div>
-                        <div class="event-footer-item" itemtype="http://data-vocabulary.org/Event" itemscope="">
-                            <meta content="➌ Báo giá xây nhà trọn gói" itemprop="eventType">
-                            <meta content="➌ Báo giá xây nhà trọn gói" itemprop="name">
-                            <meta content="➌ Báo giá xây nhà trọn gói" itemprop="description">
+                            <meta content="➋ Bảng giá xây nhà trọn gói tại TP HCM" itemprop="eventType">
+                            <meta content="➋ Bảng giá xây nhà trọn gói tại TP HCM" itemprop="name">
+                            <meta content="➋ Bảng giá xây nhà trọn gói tại TP HCM" itemprop="description">
                             <h6>
                             <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" itemprop="url">
-                                <span itemprop="summary">➌ Báo giá xây nhà trọn gói</span> </a>
+                                <span itemprop="summary">➋ Bảng giá xây nhà trọn gói tại TP HCM</span> </a>
+                            </h6>
+                            <meta content="2/2/2030" itemprop="startDate">
+                            <meta content="☎️ Báo Giá 0982.96.93.79" itemprop="location">
+                        </div>
+                        <div class="event-footer-item" itemtype="http://data-vocabulary.org/Event" itemscope="">
+                            <meta content="➌ Dịch vụ xây nhà trọn gói tại TP HCM" itemprop="eventType">
+                            <meta content="➌ Dịch vụ xây nhà trọn gói tại TP HCM" itemprop="name">
+                            <meta content="➌ Dịch vụ xây nhà trọn gói tại TP HCM" itemprop="description">
+                            <h6>
+                            <a href="{{ path('news_show', {'slug': 'xay-nha-tron-goi' }) }}" itemprop="url">
+                                <span itemprop="summary">➌ Dịch vụ xây nhà trọn gói tại TP HCM</span> </a>
                             </h6>
                             <meta content="3/3/2030" itemprop="startDate">
-                            <meta content="☎️ Báo Giá 0982.96.93.79" itemprop="location">
+                            <meta content="➽ Cam Kết Bảo Hành" itemprop="location">
                         </div>
                     </div>
                 </div>
