--- a/app/Resources/views/news/components/listPrices.html.twig
+++ b/app/Resources/views/news/components/listPrices.html.twig
@@ -1,29 +1,33 @@
-<div class="row bang-gia">
-    <div class="one col-12 col-sm-12 col-md-3">
-        <h3>CÔNG TY TNHH TƯ VẤN THIẾT KẾ XÂY DỰNG MINH DUY</h3>
-    </div>
-    <div class="two col-xs-12 col-sm-4 col-md-3">
-        <div>
-            <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" title="Bảng giá xây nhà trọn gói">
-                <i class="fa fa-paper-plane"></i>
-                Bảng giá xây nhà trọn gói
+<div class="{% if hasContainer is defined %}{% else %}container{% endif %}">
+    <div class="row bang-gia">
+        <div class="one col-12 col-sm-12 col-md-3">
+            <a href="{{ path('homepage') }}" title="{{ get_setting('siteName') }}">
+                <img alt="{{ get_setting('siteName') }}" src="{{ asset('assets/images/logo.png') }}">
             </a>
         </div>
-    </div>
-    <div class="three col-xs-12 col-sm-4 col-md-3">
-        <div>
-            <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" title="Bảng giá sửa nhà trọn gói">
-                <i class="fa fa-paper-plane"></i>
-                Bảng giá sửa nhà trọn gói
-            </a>
+        <div class="two col-xs-12 col-sm-4 col-md-3">
+            <div>
+                <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" title="Bảng giá xây nhà trọn gói">
+                    <i class="far fa-building"></i>
+                    Bảng giá xây nhà trọn gói
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="four col-xs-12 col-sm-4 col-md-3">
-        <div>
-            <a href="{{ path('news_show', {'slug': 'bang-gia-xay-dung-nha-phan-tho' }) }}" title="Bảng giá xây nhà phần thô">
-                <i class="fa fa-paper-plane"></i>
-                Bảng giá xây nhà phần thô
-            </a>
+        <div class="three col-xs-12 col-sm-4 col-md-3">
+            <div>
+                <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" title="Bảng giá sửa nhà trọn gói">
+                    <i class="far fa-building"></i>
+                    Bảng giá sửa nhà trọn gói
+                </a>
+            </div>
+        </div>
+        <div class="four col-xs-12 col-sm-4 col-md-3">
+            <div>
+                <a href="{{ path('news_show', {'slug': 'bang-gia-xay-dung-nha-phan-tho' }) }}" title="Bảng giá xây nhà phần thô">
+                    <i class="far fa-building"></i>
+                    Bảng giá xây nhà phần thô
+                </a>
+            </div>
         </div>
     </div>
 </div>
