--- a/app/Resources/views/news/page.html.twig
+++ b/app/Resources/views/news/page.html.twig
@@ -11,14 +11,17 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container page">
-        {{ include('news/components/listPrices.html.twig') }}
+    <div class="container page wrapper-post-container">
+        {{ include('news/components/listPrices.html.twig', {hasContainer:false}) }}
 
-        {# breadcrumbs #}
-        {{ include('news/components/breadcrumbs.html.twig') }}
-        
-        <div class="row">
-            <div class="col-12 col-md-12 col-lg-8">
+        <div class="row post-container">
+            {# Side bar #}
+            {{ include('layout/sidebar.html.twig') }}
+
+            <div class="col-12 col-md-12 col-lg-9">
+                {# breadcrumbs #}
+                {{ include('news/components/breadcrumbs.html.twig') }}
+
                 <article id="post-{{ post.getId() }}" class="news hentry" itemscope itemtype="http://schema.org/Article">
                     {# Begin google snippet #}
                     <meta itemscope itemprop="mainEntityOfPage"  itemType="https://schema.org/WebPage" itemid="{{ absolute_url(path('news_show', {'slug': post.getUrl() })) }}"/>
@@ -61,9 +64,6 @@
                     {{ include('news/comments/form.html.twig') }}
                 </article>
             </div>
-
-            {# Side bar #}
-            {{ include('layout/sidebar.html.twig') }}
         </div>
     </div>
 {% endblock %}
