--- a/web/assets/scss/front/app.scss
+++ b/web/assets/scss/front/app.scss
@@ -12,6 +12,7 @@ $web-font-path: 'data:text/css;base64,';
 @import '~bxslider/dist/jquery.bxslider.css';
 @import '~@fancyapps/fancybox/dist/jquery.fancybox.css';
 @import '../../libs/starrating/css/rating.css';
+@import "~@fortawesome/fontawesome-free/css/all.css";
 
 // pick the Lato fonts individually to avoid importing the entire font family
 @import '~lato-font/scss/public-api';
