--- a/web/assets/scss/front/global/_base_elements.scss
+++ b/web/assets/scss/front/global/_base_elements.scss
@@ -36,6 +36,12 @@ body {
     padding: 0;
 }
 
+.container {
+    @media only screen and (min-width: 992px) {
+        width: 1260px;
+    }
+}
+
 .wrapper {
     background: $white;
 }
