--- a/web/assets/scss/front/global/_color_variables.scss
+++ b/web/assets/scss/front/global/_color_variables.scss
@@ -7,6 +7,7 @@ $chambray: #3C5A98;
 $mineShaft: #222222;
 $gallery: #ededed;
 $geyser: #DBE0E8;
-$primaryColor: #356649;
+$primaryColor: #211e1f;
+$primaryColor2: #e94724;
 $killarney: #356649;
 $fadedJade: #3C746B;
