--- a/web/assets/scss/front/global/_menu.scss
+++ b/web/assets/scss/front/global/_menu.scss
@@ -1,5 +1,5 @@
 #nav {
-    background: $gray94;
+    background-color: $primaryColor2;
     z-index: 10000;
 
     .nav-container {
@@ -23,30 +23,39 @@
             padding-bottom: 0px;
             padding-top: 0px;
             justify-content: left;
+            min-height: auto;
     
             .navbar-header {
                 .navbar-brand {
-                    padding-top: 7px;
-                    padding-left: 0;
+                    padding: 5px 0;
+                    height: auto;
 
                     @media only screen and (max-width : 768px) {
                         padding-top: 5px;
+                        width: 85%;
+                        float: right;
+                        text-align: center;
                     }
     
                     img {
-                        width: 150px;
+                        width: 100px;
     
                         @media only screen and (max-width : 768px) {
-                            width: 90px;
+                            width: 55px;
+                            margin: 0 auto;
+                            vertical-align: middle;
                         }
                     }
                 }
     
                 .navbar-toggle {
-                    border-color: $killarney;
+                    border-color: $white;
+                    float: left;
+                    margin-right: 0px;
+                    padding: 8px 10px;
     
                     .icon-bar {
-                        background-color: $killarney;
+                        background-color: $white;
                     }
                 }
             }
@@ -55,6 +64,7 @@
                 border-width: 0px;
                 box-shadow: none;
                 padding: 0;
+                position: relative;
     
                 @media only screen and (max-width: 767.98px) {
                     width: 100%;
@@ -79,7 +89,7 @@
                                 bottom: 0px;
                                 left: 0;
                                 height: 3px;
-                                background: $killarney;
+                                background: $white;
                                 z-index: 10001;
                             }
                         }
@@ -92,34 +102,42 @@
                                 bottom: 0px;
                                 left: 0;
                                 height: 3px;
-                                background: $killarney;
+                                background: $white;
                                 z-index: 10001;
                             }
                         }
                     }
     
                     a {
-                        padding: 40px 10px;
-                        color: $killarney;
+                        padding: 12px 15px;
                         font-weight: 500;
-                        font-size: 17px;
+                        font-size: 16px;
+                        text-transform: uppercase;
+                        font-family: $robotoCondesed;
+                        color: $white;
+                        text-shadow: 0.2px 0.2px 0.2px $white;
 
                         &:focus, &:hover {
-                            background: $gray94;
+                            background: transparent;
                         }
     
                         @media only screen and (max-width: 768px) {
-                            padding: 10px 10px;
-                            font-size: 16px;
-                            color: $killarney;
+                            padding: 10px;
+                            font-size: 15px;
                             border-bottom: 1px dotted $geyser;
+                            color: $white;
+                            text-shadow: 0.2px 0.2px 0.2px $white;
+                        }
+
+                        i {
+                            margin-right: 0;
                         }
                     }
 
                     &.open {
                         a {
                             &:focus, &:hover {
-                                background: $gray94;
+                                background: transparent;
                             }
                         }
                     }
@@ -135,8 +153,9 @@
 
                         ul.dropdown-menu {
                             border: none;
-                            padding: 0 10px;
+                            padding: 0 15px;
                             min-width: 200px;
+                            background: $white;
 
                             @media only screen and (max-width: 767.98px) {
                                 padding: 0 10px 0 30px;
@@ -158,12 +177,31 @@
     
                                 a {
                                     padding: 10px 0;
+                                    color: $primaryColor;
     
                                     &:focus, &:hover {
-                                        background: $white;
+                                        
                                     }
                                 }
                             }
+                        }
+                    }
+                }
+
+                .navbar-form {
+                    margin: 0;
+                    padding: 0;
+
+                    .form-control {
+                        height: 30px;
+                        border: none;
+                        margin: 7px 0;
+                        border-radius: 12px;
+                        width: 180px;
+                        font-size: 15px;
+
+                        @media only screen and (max-width: 768px) {
+                            width: 100%;
                         }
                     }
                 }
@@ -209,20 +247,24 @@
 
 #nav {
     &.navbar-fixed-top {
+        opacity: 0.9;
+
         .nav-container .navbar {
             min-height: auto;
         }
 
         .nav-container .navbar {
             .navbar-header .navbar-brand {
+                padding: 5px 0;
+
                 img {
-                    width: 85px;
+                    width: 56px;
                 }
             }
 
             .navbar-collapse {
                 ul li a {
-                    padding: 20px 10px;
+                    padding: 12px 15px;
 
                     @media only screen and (max-width: 767.98px) {
                         padding: 10px;
