--- a/web/assets/scss/front/global/_sidebar.scss
+++ b/web/assets/scss/front/global/_sidebar.scss
@@ -1,4 +1,8 @@
 #sidebar {
+    .sidebar {
+        position: relative;
+    }
+
     #form-search {
         input {
             border-width: 1px;
@@ -15,7 +19,7 @@
             padding-left: 0px;
             font-size: 20px;
             position: relative;
-            border-bottom: 3px solid $mercury;
+            border-bottom: 3px solid $primaryColor;
             margin-bottom: 20px;
 
             &:before {
@@ -23,15 +27,17 @@
                 bottom: -3px;
                 left: 0;
                 content: "";
-                width: 90px;
+                width: 100px;
                 height: 3px;
-                background: $primaryColor;
+                background: $primaryColor2;
             }
         }
 
         .td-list-group-item {
             height: 75px;
+            padding: 10px;
             color: $black;
+            max-width: fit-content;
 
             &:hover {
                 background: $gray94;
@@ -49,6 +55,7 @@
                 display: -webkit-box;
                 -webkit-line-clamp: 2;
                 -webkit-box-orient: vertical;
+                padding-top: 5px;
                 overflow: hidden;
             }
         }
