--- a/web/assets/scss/front/pages/_homepage.scss
+++ b/web/assets/scss/front/pages/_homepage.scss
@@ -4,6 +4,38 @@
     @media only screen and (max-width : 768px) {
         width: 100%;
     }
+
+    .carousel-indicators {
+        margin-bottom: 0;
+        bottom: 5px;
+
+        @media only screen and (max-width : 768px) {
+            margin-bottom: 0;
+        }
+
+        li {
+            width: 15px;
+            height: 15px;
+            background-color: $white;
+            margin: 0;
+
+            @media only screen and (max-width : 768px) {
+                width: 10px;
+                height: 10px;
+            }
+
+            &.active {
+                width: 15px;
+                height: 15px;
+                background-color: $primaryColor;
+
+                @media only screen and (max-width : 768px) {
+                    width: 10px;
+                    height: 10px;
+                }
+            }
+        }
+    }
     
     .carousel-inner {
         .item {
@@ -19,10 +51,53 @@
             }
         }
     }
+
+    .carousel-control {
+        &.left {
+            .glyphicon {
+                width: 50px;
+                height: 130px;
+                top: 40%;
+                background: url("../../../images/arrow-left.png") no-repeat;
+
+                @media only screen and (max-width : 768px) {
+                    width: 45px;
+                    height: 95px;
+                    top: 30%;
+                    background-size: 70%;
+                    left: 40%;
+                }
+
+                &::before {
+                    content: "";
+                }
+            }
+        }
+
+        &.right {
+            .glyphicon {
+                width: 50px;
+                height: 130px;
+                top: 40%;
+                background: url("../../../images/arrow-right.png") no-repeat;
+
+                @media only screen and (max-width : 768px) {
+                    width: 45px;
+                    height: 95px;
+                    top: 30%;
+                    background-size: 70%;
+                    right: 20%;;
+                }
+
+                &::before {
+                    content: "";
+                }
+            }
+        }
+    }
 }
 
 .marquee {
-    background-color: $primaryColor;
     color: $white;
     height: 35px;
 
@@ -39,30 +114,32 @@
 
 .bang-gia {
     padding-top: 40px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 
     @media only screen and (min-width: 979.98px) {
         border-bottom: 1px solid $geyser;
     }
 
-    /* Small Devices, Tablets */
     @media only screen and (max-width : 768px) {
-        padding: 20px 0;
+        padding: 30px 0 0;
     }
 
     .one {
-        h3 {
-            @media only screen and (max-width : 768px) {
-                margin-bottom: 0;
-                text-align: center;
+        @media only screen and (max-width : 768px) {
+            text-align: center;
+        }
+
+        a {
+            img {
+                width: 80%;
+                vertical-align: middle;
             }
         }
     }
 
     .two, .three, .four {
         div {
-            background: $killarney;
-            margin-top: 30px;
+            background: $primaryColor2;
             padding: 10px 0;
             text-align: center;
             font-size: 18px;
@@ -76,6 +153,10 @@
             a {
                 color: $white;
 
+                &:hover {
+                    text-decoration: none;
+                }
+
                 i {
                     margin-right: 10px;
                 }
@@ -84,27 +165,24 @@
     }
 }
 
-.marketing {
-    padding-top: 30px;
-    padding-bottom: 10px;
+.why-choose-us {
+    background-image: url("../../assets/images/background-why-choose-us.jpg");
+    background-position: center center;
+    background-attachment: fixed;
+    padding: 30px 0;
 
-    .col-md-4 {
-        margin: 20px 0;
-        
-        /* Small Devices, Tablets */
-        @media only screen and (max-width : 768px) {
-            margin: 5px 0;
-        }
+    @media only screen and (max-width: 768px) {
+        padding: 0 0 20px;
+    }
 
-        .marketing-company {
-            p {
-                margin-bottom: 12px;
-                text-align: justify;
+    .row {
+        .why-choose-us-title {
+            padding: 30px 0;
+            color: $primaryColor;
+            margin: 0;
 
-                /* Small Devices, Tablets */
-                @media only screen and (max-width : 768px) {
-                    margin-bottom: 10px;
-                }
+            @media only screen and (max-width: 768px) {
+                font-size: 28px;
             }
         }
 
@@ -119,7 +197,7 @@
     
                     i {
                         margin-right: 0;
-                        color: $killarney;
+                        color: $primaryColor2;
                         vertical-align: top;
                     }
                 }
@@ -128,11 +206,13 @@
             .media-body {
                 h2 {
                     font-size: 18px;
-                    margin-bottom: 3px;
+                    font-weight: 600;
+                    margin-bottom: 8px;
                 }
     
                 .marketing-container {
-                    font-size: 15px;
+                    font-size: 16px;
+                    line-height: 24px;
                 }
             }
         }
@@ -144,26 +224,82 @@
         margin-bottom: 20px;
 
         .news-item-wrapper {
-            border: 1px solid $killarney;
+            border: 1px solid $black;
 
             &:hover {
-                background: $gray94;
+                border: 1px solid $primaryColor2;
+
+                .media-thumb {
+                    .img-thumbnail {
+                        transform: scale(1.5);
+                    }
+
+                    a {
+                        opacity: 1;
+
+                        i {
+                            -webkit-transform: translate(-50%, -50%) rotate(0);
+                            -moz-transform: translate(-50%, -50%) rotate(0);
+                            -ms-transform: translate(-50%, -50%) rotate(0);
+                            transform: translate(-50%, -50%) rotate(0);
+                        }
+                    }
+                }
             }
 
             .media-thumb {
                 display: block;
-                height: 195px;
+                height: 220px;
                 overflow: hidden;
+                position: relative;
 
                 .img-thumbnail {
                     padding: 0px;
                     border-radius: 0px;
                     border: none;
                     width: 100%;
+                    height: 100%;
                     transition: 0.6s ease;
+                }
 
-                    &:hover {
-                        transform: scale(1.2);
+                a {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    background-color: rgba(0, 0, 0, 0.5);
+                    overflow: hidden;
+                    opacity: 0;
+                    -webkit-transition: all 0.4s ease;
+                    -moz-transition: all 0.4s ease;
+                    -ms-transition: all 0.4s ease;
+                    transition: all 0.4s ease;
+
+                    i {
+                        display: block;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        width: 50px;
+                        height: 50px;
+                        line-height: 46px;
+                        font-size: 1.3em;
+                        border: 2px solid $white;
+                        color: $white;
+                        text-align: center;
+                        -webkit-border-radius: 50%;
+                        -moz-border-radius: 50%;
+                        -ms-border-radius: 50%;
+                        border-radius: 50%;
+                        -webkit-transform: translate(-50%, -50%) rotate(270deg);
+                        -moz-transform: translate(-50%, -50%) rotate(270deg);
+                        -ms-transform: translate(-50%, -50%) rotate(270deg);
+                        transform: translate(-50%, -50%) rotate(270deg);
+                        -webkit-transition: all 0.4s ease;
+                        -moz-transition: all 0.4s ease;
+                        -ms-transition: all 0.4s ease;
+                        transition: all 0.4s ease;
                     }
                 }
             }
@@ -175,10 +311,11 @@
                     font-size: 20px;
                     min-height: 60px;
                     margin: 0;
+                    padding: 7px 0;
+                    text-align: center;
 
                     @media only screen and (max-width: 767.98px) {
                         min-height: auto;
-                        margin-bottom: 10px;
                     }
     
                     a {
@@ -189,8 +326,11 @@
                         max-height: 50px;
                         -webkit-line-clamp: 2;
                         -webkit-box-orient: vertical;
-                        color: #0f4224;
-    
+                        color: $primaryColor2;
+                        font-family: $robotoCondesed;
+                        font-weight: 500;
+                        text-transform: uppercase;
+
                         &:hover {
                             text-decoration: none;
                         }
@@ -200,7 +340,9 @@
                 p {
                     font-size: 16px;
                     margin-bottom: 0;
+                    padding: 5px 0;
                     line-height: 26px;
+                    text-align: center;
                 }
             }
         }
@@ -209,15 +351,28 @@
 
 .title-list-news-items {
     h1 {
-        font-size: 30px;
+        font-size: 35px;
         margin: 30px 0 5px;
-        color: $killarney;
+        color: $primaryColor2;
+
+        img {
+            height: 25px;
+            vertical-align: baseline;
+        }
+
+        i {
+            font-size: 17px;
+            vertical-align: middle;
+            margin-top: -5px;
+            margin-right: 0;
+            color: $primaryColor2;
+        }
     }
 
     .block-underline {
-        width: 150px;
-        height: 2px;
-        background: $killarney;
+        width: 220px;
+        height: 3px;
+        background: $primaryColor;
         display: block;
         margin: 0 auto 10px;
     }
