--- a/web/assets/scss/front/pages/_news.scss
+++ b/web/assets/scss/front/pages/_news.scss
@@ -11,7 +11,7 @@
 /* Slide project hot
 ------------------------------------------------------------------------- */
 .project-hot {
-    margin: 50px 0 0;
+    margin: 0;
 
     @media only screen and (max-width: 767.98px) {
         margin: 30px 0 0;
@@ -33,7 +33,7 @@
             margin-bottom: 0;
 
             @media only screen and (min-width: 979.98px) {
-                max-width: 1170px !important;
+                max-width: 1260px !important;
             }
 
             .bx-viewport {
@@ -45,7 +45,7 @@
                     }
     
                     .news-item-wrapper {
-                        width: 262px !important;
+                        width: 292.5px !important;
     
                         @media only screen and (max-width: 767.98px) {
                             width: 100% !important;
@@ -57,45 +57,75 @@
                     }
                 }
             }
+
+            .bx-controls {
+                .bx-controls-direction {
+                    .bx-prev {
+                        width: 40px;
+                        height: 120px;
+                        top: 35%;
+                        left: 0;
+                        background: url("../../../images/arrow-left.png") no-repeat;
+                        background-color: rgba(0, 0, 0, 0.3);
+                        background-size: 40px;
+                    }
+
+                    .bx-next {
+                        width: 40px;
+                        height: 120px;
+                        top: 35%;
+                        right: 0;
+                        background: url("../../../images/arrow-right.png") no-repeat;
+                        background-color: rgba(0, 0, 0, 0.3);
+                        background-size: 40px;
+                    }
+                }
+            }
         }
     }
 }
 
 /* Post detail
 ------------------------------------------------------------------------- */
-.news {
-    h1 {
-        font-size: 35px;
-        line-height: 38px;
-    }
+.wrapper-post-container {
+    .post-container {
+        margin-top: 20px;
 
-    .news-container {
-        ul, ol {
-            padding-left: 15px;
-            margin-bottom: 15px;
-            margin-left: 15px;
-
-            li {
-                margin-bottom: 0.3 em;
+        .news {
+            h1 {
+                font-size: 35px;
+                line-height: 38px;
             }
-        }
-
-        img {
-            height: auto !important;
-        }
-
-        a {
-            color: $primaryColor;
-        }
-
-        h3 {
-            font-size: 25px;
-        }
-
-        blockquote {
-            font-size: 16px;
-            border-left: 5px solid $primaryColor;
-            font-style: italic;
+        
+            .news-container {
+                ul, ol {
+                    padding-left: 15px;
+                    margin-bottom: 15px;
+                    margin-left: 15px;
+        
+                    li {
+                        margin-bottom: 0.3 em;
+                    }
+                }
+        
+                img {
+                    height: auto !important;
+                }
+        
+                a {
+                    color: $primaryColor;
+                }
+        
+                h3 {
+                    font-size: 25px;
+                }
+        
+                blockquote {
+                    font-size: 16px;
+                    border-left: 5px solid $primaryColor;
+                    font-style: italic;
+                }
+            }
         }
     }
 }
@@ -166,7 +196,22 @@
     }
 
     .social-share {
-        .addthis_inline_share_toolbox_j0vv {
+        .social-share-label {
+            line-height: 32px;
+            float: left;
+            margin-right: 15px;
+            vertical-align: middle;
+            font-weight: bold;
+            font-style: italic;
+            margin-top: 3px;
+            text-decoration: underline;
+        }
+
+        .at-share-tbx-element .at-share-btn {
+            margin: 0 5px 0px 0;
+        }
+
+        .addthis_inline_share_toolbox_of26_7oy0 {
             display: inline-block;
         }
     }
@@ -184,16 +229,16 @@
 .related-news {
     h3 {
         position: relative;
-        border-bottom: 3px solid $mercury;
+        border-bottom: 3px solid $primaryColor;
 
         &:before {
+            content: "";
             position: absolute;
             bottom: -3px;
             left: 0;
-            content: "";
-            width: 90px;
+            width: 150px;
             height: 3px;
-            background: $primaryColor;
+            background: $primaryColor2;
         }
     }
 
@@ -202,38 +247,122 @@
             border: 1px solid $killarney;
             margin-bottom: 30px;
 
+            &:hover {
+                .related-img {
+                    .img-thumbnail {
+                        transform: scale(1.5);
+                    }
+
+                    a {
+                        opacity: 1;
+
+                        i {
+                            -webkit-transform: translate(-50%, -50%) rotate(0);
+                            -moz-transform: translate(-50%, -50%) rotate(0);
+                            -ms-transform: translate(-50%, -50%) rotate(0);
+                            transform: translate(-50%, -50%) rotate(0);
+                        }
+                    }
+                }
+            }
+
             .related-img {
                 display: block;
                 overflow: hidden;
+                position: relative;
 
                 .img-thumbnail {
                     border-radius: 0px;
                     padding: 0px;
                     border: none;
                     width: 100%;
+                    height: 100%;
                     transition: 0.6s ease;
+                }
 
-                    &:hover {
-                        transform: scale(1.2);
+                a {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    background-color: rgba(0, 0, 0, 0.5);
+                    overflow: hidden;
+                    opacity: 0;
+                    -webkit-transition: all 0.4s ease;
+                    -moz-transition: all 0.4s ease;
+                    -ms-transition: all 0.4s ease;
+                    transition: all 0.4s ease;
+
+                    i {
+                        display: block;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        width: 50px;
+                        height: 50px;
+                        line-height: 46px;
+                        font-size: 1.3em;
+                        border: 2px solid $white;
+                        color: $white;
+                        text-align: center;
+                        -webkit-border-radius: 50%;
+                        -moz-border-radius: 50%;
+                        -ms-border-radius: 50%;
+                        border-radius: 50%;
+                        -webkit-transform: translate(-50%, -50%) rotate(270deg);
+                        -moz-transform: translate(-50%, -50%) rotate(270deg);
+                        -ms-transform: translate(-50%, -50%) rotate(270deg);
+                        transform: translate(-50%, -50%) rotate(270deg);
+                        -webkit-transition: all 0.4s ease;
+                        -moz-transition: all 0.4s ease;
+                        -ms-transition: all 0.4s ease;
+                        transition: all 0.4s ease;
                     }
                 }
             }
     
             a.related-title {
-                padding: 10px 8px;
-                font-size: 16px;
-                line-height: 26px;
-                height: 67px;
-                max-height: 67px;
-                color: #0f4224;
+                margin: 10px 0px;
+                padding: 0 5px;
+                font-size: 15px;
+                line-height: 22px;
+                height: 45px;
+                max-height: 45px;
+                color: $primaryColor2;
                 overflow: hidden;
                 text-overflow: ellipsis;
                 display: -webkit-box;
                 -webkit-line-clamp: 2;
                 -webkit-box-orient: vertical;
+                font-family: $robotoCondesed;
+                font-weight: bold;
+                text-transform: uppercase;
+                text-align: center;
 
                 &:hover {
                     text-decoration: none;
+                }
+
+                @media only screen and (max-width: 767.98px) {
+                    font-size: 17px;
+                    padding: 5px 10px;
+                    max-height: 55px;
+                    height: 55px;
+                }
+            }
+
+            p {
+                padding: 0 5px;
+                text-align: center;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+
+                @media only screen and (max-width: 767.98px) {
+                    padding: 0px 10px;
                 }
             }
         }
