--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -61,6 +61,45 @@
                     <div class="col-md-4 col-sm-6">
                         <div class="media">
                             <div class="media-left">
+                                <span><i class="fas fa-american-sign-language-interpreting"></i></span>
+                            </div>
+                            <div class="media-body">
+                                <h2 class="media-heading text-uppercase">Không bán thầu</h2>
+                                <div class="marketing-container">
+                                    <p>Chúng tôi cam kết không bán thầu, công ty tự thiết kế và thi công</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="media">
+                            <div class="media-left">
+                                <span><i class="fas fa-exclamation-triangle"></i></span>
+                            </div>
+                            <div class="media-body">
+                                <h2 class="media-heading text-uppercase">Không dùng hàng giả</h2>
+                                <div class="marketing-container">
+                                    <p>Chúng tôi cam kết không dùng hàng giả, hàng kém chất lượng trong thi công</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="media">
+                            <div class="media-left">
+                                <span><i class="far fa-calendar-alt"></i></span>
+                            </div>
+                            <div class="media-body">
+                                <h2 class="media-heading text-uppercase">Thi công đúng tiến độ</h2>
+                                <div class="marketing-container">
+                                    <p>Chúng tôi cam kết thi công đúng tiến độ đề ra, đảm bảo chất lượng thi công</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="media">
+                            <div class="media-left">
                                 <span><i class="fa fa-globe"></i></span>
                             </div>
                             <div class="media-body">
