--- a/app/Resources/views/news/components/listPrices.html.twig
+++ b/app/Resources/views/news/components/listPrices.html.twig
@@ -16,7 +16,7 @@
         <div class="three col-xs-12 col-sm-4 col-md-3">
             <div>
                 <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" title="Bảng giá sửa nhà trọn gói">
-                    <i class="far fa-building"></i>
+                    <i class="fas fa-drafting-compass"></i>
                     Bảng giá sửa nhà trọn gói
                 </a>
             </div>
@@ -24,7 +24,7 @@
         <div class="four col-xs-12 col-sm-4 col-md-3">
             <div>
                 <a href="{{ path('news_show', {'slug': 'bang-gia-xay-dung-nha-phan-tho' }) }}" title="Bảng giá xây nhà phần thô">
-                    <i class="far fa-building"></i>
+                    <i class="fas fa-tools"></i>
                     Bảng giá xây nhà phần thô
                 </a>
             </div>
