--- a/web/assets/scss/front/global/_header.scss
+++ b/web/assets/scss/front/global/_header.scss
@@ -44,6 +44,10 @@
                 display: contents;
                 font-size: 16px;
             }
+
+            a {
+                color: $primaryColor2;
+            }
         }
     }
 
