--- a/app/Resources/views/news/listByCategory.html.twig
+++ b/app/Resources/views/news/listByCategory.html.twig
@@ -1,7 +1,7 @@
 <div class="row project-hot">
     <div class="col-md-12 title-list-news-items">
         <h1 class="text-center text-uppercase">
-            <img alt="{{ blockOnHomepage.category.getName() }}" src="{{ asset('assets/images/icon-logo.png') }}" />
+            <img alt="Xây Dựng Minh Duy" src="{{ asset('assets/images/icon-logo.png') }}" />
             <i class="fas fa-angle-right"></i>
             Dự án nổi bật
         </h1>
