--- a/web/assets/scss/front/global/_costs.scss
+++ b/web/assets/scss/front/global/_costs.scss
@@ -11,11 +11,11 @@
 
     button {
         border-width: 0px;
-        background-color: $primaryColor;
+        background-color: $primaryColor2;
         margin-top: 8px;
 
         &:focus, &:hover {
-            background-color: $primaryColor;
+            background-color: $primaryColor2;
         }
     }
 
@@ -24,15 +24,16 @@
             font-size: 28px;
             margin-top: 30px;
             position: relative;
+            border-bottom: 3px solid $primaryColor;
 
             &:before {
                 position: absolute;
                 bottom: -3px;
                 left: 0;
                 content: "";
-                width: 120px;
-                height: 2px;
-                background: $primaryColor;
+                width: 300px;
+                height: 3px;
+                background: $primaryColor2;
             }
         }
 
