--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -96,38 +96,62 @@
                 </span>
                 <div class="event-footer row">
                     <div class="col-12 col-sm-12 col-md-12">
-                        <div class="event-footer-item" itemtype="http://data-vocabulary.org/Event" itemscope="">
-                            <meta content="➊ Bảng giá sửa nhà trọn gói tại TP HCM" itemprop="eventType">
+                        <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
                             <meta content="➊ Bảng giá sửa nhà trọn gói tại TP HCM" itemprop="name">
                             <meta content="➊ Bảng giá sửa nhà trọn gói tại TP HCM" itemprop="description">
                             <h6>
-                            <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" itemprop="url">
-                                <span itemprop="summary">➊ Bảng giá sửa nhà trọn gói tại TP HCM</span> </a>
+                                <a href="{{ path('news_show', {'slug': 'bao-gia-sua-nha-tron-goi' }) }}" itemprop="url">
+                                    <span>➊ Bảng giá sửa nhà trọn gói tại TP HCM</span>
+                                </a>
                             </h6>
-                            <meta content="1/1/2030" itemprop="startDate">
-                            <meta content="☎️ Báo Giá 0982.96.93.79" itemprop="location">
+                            <meta content="2021-01-01T4:00" itemprop="startDate">
+                            <div itemprop="location" itemscope itemtype="http://schema.org/Place">
+                                <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
+                                <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                                    <meta content="10E3 Đường 30, P. Tân Phong, Quận 7" itemprop="streetAddress">
+                                    <meta content="Ho Chi Minh" itemprop="addressLocality">
+                                    <meta content="VN" itemprop="addressRegion">
+                                    <meta content="70000" itemprop="postalCode">
+                                </div>
+                            </div>
                         </div>
-                        <div class="event-footer-item" itemtype="http://data-vocabulary.org/Event" itemscope="">
-                            <meta content="➋ Bảng giá xây nhà trọn gói tại TP HCM" itemprop="eventType">
+                        <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
                             <meta content="➋ Bảng giá xây nhà trọn gói tại TP HCM" itemprop="name">
                             <meta content="➋ Bảng giá xây nhà trọn gói tại TP HCM" itemprop="description">
                             <h6>
-                            <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" itemprop="url">
-                                <span itemprop="summary">➋ Bảng giá xây nhà trọn gói tại TP HCM</span> </a>
+                                <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi' }) }}" itemprop="url">
+                                    <span>➋ Bảng giá xây nhà trọn gói tại TP HCM</span>
+                                </a>
                             </h6>
-                            <meta content="2/2/2030" itemprop="startDate">
-                            <meta content="☎️ Báo Giá 0982.96.93.79" itemprop="location">
+                            <meta content="2021-02-02T5:00" itemprop="startDate">
+                            <div itemprop="location" itemscope itemtype="http://schema.org/Place">
+                                <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
+                                <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                                    <meta content="10E3 Đường 30, P. Tân Phong, Quận 7" itemprop="streetAddress">
+                                    <meta content="Ho Chi Minh" itemprop="addressLocality">
+                                    <meta content="VN" itemprop="addressRegion">
+                                    <meta content="70000" itemprop="postalCode">
+                                </div>
+                            </div>
                         </div>
-                        <div class="event-footer-item" itemtype="http://data-vocabulary.org/Event" itemscope="">
-                            <meta content="➌ Dịch vụ xây nhà trọn gói tại TP HCM" itemprop="eventType">
+                        <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
                             <meta content="➌ Dịch vụ xây nhà trọn gói tại TP HCM" itemprop="name">
                             <meta content="➌ Dịch vụ xây nhà trọn gói tại TP HCM" itemprop="description">
                             <h6>
-                            <a href="{{ path('news_show', {'slug': 'xay-nha-tron-goi' }) }}" itemprop="url">
-                                <span itemprop="summary">➌ Dịch vụ xây nhà trọn gói tại TP HCM</span> </a>
+                                <a href="{{ path('news_show', {'slug': 'xay-nha-tron-goi' }) }}" itemprop="url">
+                                    <span>➌ Dịch vụ xây nhà trọn gói tại TP HCM</span>
+                                </a>
                             </h6>
-                            <meta content="3/3/2030" itemprop="startDate">
-                            <meta content="➽ Cam Kết Bảo Hành" itemprop="location">
+                            <meta content="2021-03-03T6:00" itemprop="startDate">
+                            <div itemprop="location" itemscope itemtype="http://schema.org/Place">
+                                <meta content="☎️ Báo Giá 0982.969.379" itemprop="name">
+                                <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                                    <meta content="10E3 Đường 30, P. Tân Phong, Quận 7" itemprop="streetAddress">
+                                    <meta content="Ho Chi Minh" itemprop="addressLocality">
+                                    <meta content="VN" itemprop="addressRegion">
+                                    <meta content="70000" itemprop="postalCode">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -135,7 +159,7 @@
         </div>
         <div class="row copyright">
             <div class="col-sm-12 text-center">
-                <p>Copyright © {{ "now"|date('Y') }} <a href="https://xaydungminhduy.com" title="Xây Dựng Minh Duy">Xây Dựng Minh Duy</a>, all rights reserved.</p>
+                <p>Copyright © {{ "now"|date('Y') }} <a href="https://xaydungminhduy.com/" title="Xây Dựng Minh Duy">Xây Dựng Minh Duy</a>, all rights reserved.</p>
             </div>
         </div>
     </div>
