--- a/app/Resources/views/news/components/itemsGridSlide.html.twig
+++ b/app/Resources/views/news/components/itemsGridSlide.html.twig
@@ -1,7 +1,7 @@
 <div class="news-item">
     <div class="news-item-wrapper">
         <div class="media-thumb">
-            <img class="mr-3 img-thumbnail" src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_564_440') }}" alt="{{row.getTitle()}}" />
+            <img class="mr-3 img-thumbnail lazyload" data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_564_440') }}" alt="{{row.getTitle()}}" />
             <a class="media-thumb" title="{{ row.getTitle() }}" href="{{ path('news_show', {'slug': row.getUrl() }) }}">
                 <i class="fa fa-link"></i>
             </a>
