--- a/app/Resources/views/news/hot.html.twig
+++ b/app/Resources/views/news/hot.html.twig
@@ -8,8 +8,9 @@
                 <div class="item">
                     <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" class="list-group-item td-list-group-item" title="{{ row.getTitle() }}">
                         <img
+                            class="lazyload"
                             alt="{{ row.getTitle() }}"
-                            src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_70_50') }}" />
+                            data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_70_50') }}" />
                         <span>{{ row.getTitle() }}</span>
                     </a>
                 </div>
