--- a/app/Resources/views/news/page.html.twig
+++ b/app/Resources/views/news/page.html.twig
@@ -10,6 +10,23 @@
     <meta property="og:description" content="{{ post.getPageDescription() is not null ? post.getPageDescription() : post.getDescription() }}" />
 {% endblock %}
 
+{% block structuredReview %}
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org/",
+        "@type": "CreativeWorkSeries",
+        "name": "{{ post.getTitle() }}",
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "{{ rating }}",
+            "ratingCount": "{{ ratingCount }}",
+            "bestRating" : "5",
+            "worstRating": "1"
+        }
+    }
+    </script>
+{% endblock %}
+
 {% block body %}
     <div class="container page wrapper-post-container">
         {{ include('news/components/listPrices.html.twig', {hasContainer:false}) }}
