--- a/web/assets/scss/front/app.scss
+++ b/web/assets/scss/front/app.scss
@@ -15,9 +15,9 @@ $web-font-path: 'data:text/css;base64,';
 @import "~@fortawesome/fontawesome-free/css/all.css";
 
 // pick the Lato fonts individually to avoid importing the entire font family
-@import '~lato-font/scss/public-api';
-@include lato-include-font('normal');
-@include lato-include-font('bold');
+//@import '~lato-font/scss/public-api';
+//@include lato-include-font('normal');
+//@include lato-include-font('bold');
 
 @import "global/fonts";
 @import "global/color_variables";
