--- a/web/assets/scss/front/global/_sidebar.scss
+++ b/web/assets/scss/front/global/_sidebar.scss
@@ -35,9 +35,14 @@
 
         .td-list-group-item {
             height: 75px;
-            padding: 10px;
+            padding: 10px 0;
             color: $black;
-            max-width: fit-content;
+            border: none;
+            border-top: 1px solid #ecf0f1;
+
+            &:last-child {
+                border-bottom: 1px solid #ecf0f1;
+            }
 
             &:hover {
                 background: $gray94;
@@ -57,6 +62,20 @@
                 -webkit-box-orient: vertical;
                 padding-top: 5px;
                 overflow: hidden;
+            }
+
+            &.item-price {
+                height: auto;
+                font-size: 17px;
+
+                i {
+                    color: $primaryColor2;
+                    margin-right: 8px;
+                }
+
+                span {
+                    display: inline;
+                }
             }
         }
     }
