--- a/web/assets/scss/front/pages/_news.scss
+++ b/web/assets/scss/front/pages/_news.scss
@@ -244,10 +244,12 @@
 
     .row {
         .related-wrapper {
-            border: 1px solid $killarney;
+            border: 1px solid $primaryColor;
             margin-bottom: 30px;
 
             &:hover {
+                border: 1px solid $primaryColor2;
+
                 .related-img {
                     .img-thumbnail {
                         transform: scale(1.5);
@@ -276,8 +278,12 @@
                     padding: 0px;
                     border: none;
                     width: 100%;
-                    height: 100%;
+                    height: 150px;
                     transition: 0.6s ease;
+
+                    @media only screen and (max-width: 767.98px) {
+                        height: auto;
+                    }
                 }
 
                 a {
@@ -347,8 +353,8 @@
                 @media only screen and (max-width: 767.98px) {
                     font-size: 17px;
                     padding: 5px 10px;
-                    max-height: 55px;
-                    height: 55px;
+                    max-height: 45px;
+                    height: 45px;
                 }
             }
 
