--- a/app/Resources/views/layout/slide.html.twig
+++ b/app/Resources/views/layout/slide.html.twig
@@ -10,7 +10,10 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img class="lazyload" data-src="{{ asset('assets/images/banner/banner-cafe-cach-coffee.jpg') }}" alt="Cach Cafe">
+                <img class="lazyload"
+                    src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                    data-src="{{ asset('assets/images/banner/banner-cafe-cach-coffee.jpg') }}"
+                    alt="Cach Cafe">
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h2>Cach Cafe</h2>
@@ -18,7 +21,10 @@
                 </div>
             </div>
             <div class="item">
-                <img class="lazyload" data-src="{{ asset('assets/images/banner/banner-cafe.jpg') }}" alt="Xây Dựng Minh Duy">
+                <img class="lazyload"
+                    src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                    data-src="{{ asset('assets/images/banner/banner-cafe.jpg') }}"
+                    alt="Xây Dựng Minh Duy">
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h3>Xây Dựng Minh Duy</h3>
@@ -27,7 +33,10 @@
             </div>
 			<div class="item">
                 <a href="{{ path('news_show', {'slug': 'du-an-xay-nha-tron-goi-cmt8-quan-10-tp-hcm' }) }}">
-                    <img class="lazyload" data-src="{{ asset('assets/images/banner/xay-nha-tron-goi-cmt8.jpg') }}" alt="Công Trình Xây Nhà Trọn Gói CMT8">
+                    <img class="lazyload"
+                    src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                    data-src="{{ asset('assets/images/banner/xay-nha-tron-goi-cmt8.jpg') }}"
+                    alt="Công Trình Xây Nhà Trọn Gói CMT8">
                 </a>
                 <div class="container">
                     <div class="carousel-caption text-left">
@@ -37,7 +46,10 @@
             </div>
             <div class="item">
                 <a href="{{ path('homepage') }}">
-                    <img class="lazyload" data-src="{{ asset('assets/images/banner/minhduyconstruction.jpg') }}" alt="Minh Duy Construction">
+                    <img class="lazyload"
+                        src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                        data-src="{{ asset('assets/images/banner/minhduyconstruction.jpg') }}"
+                        alt="Minh Duy Construction">
                 </a>
                 <div class="container">
                     <div class="carousel-caption text-left">
@@ -47,7 +59,10 @@
             </div>
             <div class="item">
                 <a href="{{ path('news_show', {'slug': 'xay-nha-pho-4-tang-anh-huu-quan-12' }) }}">
-                    <img class="lazyload" data-src="{{ asset('assets/images/banner/banner-xay-nha-pho-3-tang-thay-hanh.jpg') }}" alt="Xây nhà phố 3 tầng, Thầy Hạnh">
+                    <img class="lazyload"
+                        src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                        data-src="{{ asset('assets/images/banner/banner-xay-nha-pho-3-tang-thay-hanh.jpg') }}"
+                        alt="Xây nhà phố 3 tầng, Thầy Hạnh">
                 </a>
                 <div class="container">
                     <div class="carousel-caption text-left">
