--- a/app/Resources/views/news/components/itemsGridHomepage.html.twig
+++ b/app/Resources/views/news/components/itemsGridHomepage.html.twig
@@ -1,7 +1,10 @@
 <div class="col-xs-12 col-sm-4 col-md-3 news-item">
     <div class="news-item-wrapper">
         <div class="media-thumb">
-            <img class="mr-3 img-thumbnail lazyload" data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_564_440') }}" alt="{{row.getTitle()}}" />
+            <img class="mr-3 img-thumbnail lazyload"
+                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_564_440') }}"
+                alt="{{row.getTitle()}}" />
             <a class="media-thumb" title="{{ row.getTitle() }}" href="{{ path('news_show', {'slug': row.getUrl() }) }}">
                 <i class="fa fa-link"></i>
             </a>
