--- a/app/Resources/views/news/components/itemsGridSlide.html.twig
+++ b/app/Resources/views/news/components/itemsGridSlide.html.twig
@@ -1,10 +1,24 @@
 <div class="news-item">
     <div class="news-item-wrapper">
         <div class="media-thumb">
-            <img class="mr-3 img-thumbnail lazyload"
-                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_564_440') }}"
-                alt="{{row.getTitle()}}" />
+            <picture>
+                <!--[if IE 9]><video style="display: none"><![endif]-->
+                <source
+                    data-srcset="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_382_298') }}"
+                    media="(max-width: 639px) 100vw" />
+                <source
+                    data-srcset="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_224_169') }}"
+                    media="(min-width: 640px) and (max-width: 1023px) 50vw" />
+                <source
+                    data-srcset="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_290_220') }}"
+                    media="(min-width: 1024px) 25vw" />
+                <!--[if IE 9]></video><![endif]-->
+                <img
+                    src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                    data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_290_220') }}"
+                    class="mr-3 img-thumbnail lazyload"
+                    alt="{{row.getTitle()}}" />
+            </picture>
             <a class="media-thumb" title="{{ row.getTitle() }}" href="{{ path('news_show', {'slug': row.getUrl() }) }}">
                 <i class="fa fa-link"></i>
             </a>
