--- a/web/assets/scss/front/pages/_homepage.scss
+++ b/web/assets/scss/front/pages/_homepage.scss
@@ -223,6 +223,12 @@
     .news-item {
         margin-bottom: 20px;
 
+        &.d-none {
+            @media (min-width: 768px) and (max-width: 991.98px) {
+                display: none;
+            }
+        }
+
         .news-item-wrapper {
             border: 1px solid $black;
 
@@ -252,6 +258,14 @@
                 height: 220px;
                 overflow: hidden;
                 position: relative;
+
+                @media only screen and (max-width: 980px) {
+                    height: 165px;
+                }
+
+                @media only screen and (max-width: 767.98px) {
+                    height: 260px;
+                }
 
                 .img-thumbnail {
                     padding: 0px;
